# ttsntpd

./: .gitignore  Makefile.am  autogen.sh  configure.ac  rtc.c  rtc.h  rtcd.c  rtcd.h  sntp.c  sntp.h  tod.c  tod.h  zutil.c  zutil.h
